1-R. 회원 로그인 히스토리 역순으로 출력하기 (최신 로그인 일자 순으로 출력)

--- a/fastlms3/src/main/resources/templates/admin/member/detail.html
+++ b/fastlms3/src/main/resources/templates/admin/member/detail.html
@@ -110,18 +110,18 @@
                 </thead>
 
                 <tbody>
-                    <tr th:each="log, i : ${member.memberLoginHistoryList}">
+                    <tr th:each="i : ${#numbers.sequence(member.memberLoginHistoryList.size() -1, 0, -1)}">
                         <td>
-                            <p th:text="${i.index + 1}"></p>
+                            <p th:text="${member.memberLoginHistoryList[i].id}"></p>
                         </td>
                         <td>
-                            <p th:text="${log.regDt}"></p>
+                            <p th:text="${member.memberLoginHistoryList[i].regDt}"></p>
                         </td>
                         <td>
-                            <p th:text="${log.ipAddr}"></p>
+                            <p th:text="${member.memberLoginHistoryList[i].ipAddr}"></p>
                         </td>
                         <td>
-                            <p th:text="${log.userAgent}"></p>
+                            <p th:text="${member.memberLoginHistoryList[i].userAgent}"></p>
                         </td>
                     </tr>
                 </tbody>
