--- a/fastlms3/src/main/resources/templates/index.html
+++ b/fastlms3/src/main/resources/templates/index.html
@@ -3,14 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>메인 페이지</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script>
+        $(function(){
+            $('.bxslider').bxSlider({
+                mode: 'fade',
+                captions: true,
+                slideWidth: 800
+            });
+        });
+    </script>
 </head>
 <body>
     <h1>메인 페이지 </h1>
     <div th:replace="/fragments/layout.html :: fragment-body-menu"></div>
 
-    <div>
-        <img src="/files/2021/09/05/6e5170576b0c4c29879e5334dfccab2d.png"/>
+    <div class="home__slider">
+        <div class="bxslider">
+            <div th:each="x : ${banners}">
+                <a th:href="${x.linkUrl}" th:target="${x.target}">
+                    <img th:src="${x.urlFilename}">
+                </a>
+            </div>
+        </div>
     </div>
 
 </body>
-</html>
+</html>../
